Closes #188 fix alignment of url/action strings in suggestions

--- a/chrome/skin/linux/suggestionsPanel48.css
+++ b/chrome/skin/linux/suggestionsPanel48.css
@@ -13,7 +13,7 @@
 
 #PopupAutoCompleteRichResult[awesomerStyle="rich"] .autocomplete-richlistitem :-moz-any(.ac-url, .ac-action),
 #PopupAutoCompleteRichResult[awesomerStyle="frog"] .autocomplete-richlistitem[selected="true"] :-moz-any(.ac-url, .ac-action) {
-	top: 1.9em;
+	margin-top: 1px;
 }
 
 /* Color schemes implementation. */
