--- a/chrome/skin/mac/suggestionsPanel48.css
+++ b/chrome/skin/mac/suggestionsPanel48.css
@@ -10,14 +10,11 @@
 	height: calc(30px + 1.25em);
 }
 
-#PopupAutoCompleteRichResult[awesomerStyle="rich"] .autocomplete-richlistitem :-moz-any(.ac-url, .ac-action) {
-	top: 1.9em;
-}
-
 #PopupAutoCompleteRichResult[awesomerStyle="frog"] .autocomplete-richlistitem[selected="true"] {
 	height: calc(30px + 1.4em);
 }
 
+#PopupAutoCompleteRichResult[awesomerStyle="rich"] .autocomplete-richlistitem :-moz-any(.ac-url, .ac-action),
 #PopupAutoCompleteRichResult[awesomerStyle="frog"] .autocomplete-richlistitem[selected="true"] :-moz-any(.ac-url, .ac-action) {
-	top: 2.3em;
+	margin-top: 3px;
 }
